--- a/Shop/allbrands-page/app/css/allbrands.css
+++ b/Shop/allbrands-page/app/css/allbrands.css
@@ -4,6 +4,27 @@ ul {
   padding: 0;
   margin: 0; }
 
+.mobile_sort {
+  display: none; }
+  .mobile_sort .mobile_list {
+    display: block;
+    -webkit-box-shadow: inset 0px 1px 1px -1px #d5d5d5;
+            box-shadow: inset 0px 1px 1px -1px #d5d5d5;
+    width: 100%;
+    border: 1px solid #d5d5d5;
+    padding: 10px 7px;
+    -webkit-border-radius: 4px;
+            border-radius: 4px; }
+    .mobile_sort .mobile_list span {
+      display: block; }
+    .mobile_sort .mobile_list option {
+      display: block !important;
+      background-color: #fff;
+      display: block; }
+      .mobile_sort .mobile_list option:focus {
+        -webkit-border-radius: 4px 4px 0 0;
+                border-radius: 4px 4px 0 0; }
+
 .filter_show_btn {
   cursor: pointer;
   width: 100%;
@@ -457,9 +478,6 @@ ul {
   -webkit-column-count: 3;
      -moz-column-count: 3;
           column-count: 3;
-  -webkit-column-width: 33.33%;
-     -moz-column-width: 33.33%;
-          column-width: 33.33%;
   -webkit-column-gap: 0px;
      -moz-column-gap: 0px;
           column-gap: 0px; }
@@ -488,6 +506,142 @@ ul {
   .brand_list_container li a {
     font-size: 14px;
     color: #585858; }
+
+.single_v {
+  display: none;
+  -webkit-column-count: 1 !important;
+     -moz-column-count: 1 !important;
+          column-count: 1 !important;
+  -webkit-column-width: 100%;
+     -moz-column-width: 100%;
+          column-width: 100%; }
+  .single_v .item_sign {
+    display: none; }
+  .single_v ul {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    width: 100%; }
+  .single_v li {
+    width: 20%;
+    text-align: center;
+    padding: 1px 10px; }
+
+.cards_v {
+  display: none;
+  -webkit-column-count: 1 !important;
+     -moz-column-count: 1 !important;
+          column-count: 1 !important;
+  -webkit-column-width: 100% !important;
+     -moz-column-width: 100% !important;
+          column-width: 100% !important; }
+  .cards_v .list_block {
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0 -10px; }
+  .cards_v ul {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    margin: 0;
+    margin: -10px 0; }
+    .cards_v ul li {
+      margin: 0;
+      padding: 10px; }
+  .cards_v .link_container {
+    position: relative;
+    display: block; }
+    .cards_v .link_container:after {
+      content: '';
+      display: block;
+      padding-top: 100%; }
+    .cards_v .link_container a {
+      position: absolute;
+      -webkit-transition: .3s;
+      -o-transition: .3s;
+      transition: .3s;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-pack: justify;
+      -webkit-justify-content: space-between;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
+      width: 100%;
+      height: 100%;
+      border: 1px solid #e5e5e5;
+      background-color: #fff;
+      padding: 30px;
+      text-decoration: none !important; }
+    .cards_v .link_container .img_block {
+      display: block;
+      height: 65%; }
+      .cards_v .link_container .img_block img {
+        height: 100%;
+        width: auto;
+        max-width: 100%;
+        margin: 0 auto; }
+    .cards_v .link_container .bottom {
+      display: block; }
+    .cards_v .link_container .title {
+      display: block;
+      text-align: center;
+      font-size: 14px;
+      text-decoration: none;
+      color: #000;
+      padding-bottom: 10px; }
+  .cards_v ul.country_list {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: end;
+    -webkit-align-items: flex-end;
+        -ms-flex-align: end;
+            align-items: flex-end; }
+    .cards_v ul.country_list .flag {
+      font-size: 12px; }
+    .cards_v ul.country_list li {
+      color: #8d8d8d;
+      margin-bottom: 0;
+      padding: 0; }
+      .cards_v ul.country_list li:after {
+        content: ',';
+        display: inline-block;
+        padding: 0;
+        padding-right: 5px; }
+    .cards_v ul.country_list li:last-child {
+      margin-top: 4px; }
+      .cards_v ul.country_list li:last-child:after {
+        content: '';
+        display: inline-block;
+        padding: 0;
+        padding-right: 0px; }
+
+.active_sort {
+  font-weight: bold; }
+  .active_sort span {
+    background-color: #000 !important; }
 
 .filter {
   border: 1px solid #e5e5e5;
@@ -585,4 +739,194 @@ ul {
   .sort-line ul.link_list a:hover,
   .brand_list_container li a:hover {
     color: #197ac4 !important;
-    text-decoration: underline !important; } }
+    text-decoration: underline; } }
+
+@media screen and (min-width: 1025px) {
+  .paginator_link_page a:hover {
+    z-index: 2; }
+  .cards_v .link_container a:hover {
+    -webkit-box-shadow: 8px 13px 30px rgba(0, 0, 0, 0.2);
+            box-shadow: 8px 13px 30px rgba(0, 0, 0, 0.2); }
+  .catalog .catalog-page .more_cards_btn:hover {
+    background-color: #7eb8d2;
+    border-color: #7eb8d2; }
+  .popular_categories_block .section .tab_content a:hover {
+    color: #197ac4;
+    text-decoration: underline; } }
+
+@media screen and (max-width: 1180px) {
+  .catalog .catalog-page .catalog-cards .card_content .description_section .links_block {
+    padding: 0 10px; }
+  .catalog .catalog-page .catalog-cards .card_content .description_section .links_block a {
+    -webkit-box-flex: 1;
+    -webkit-flex-grow: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    padding: 10px;
+    margin: 0 5px;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    height: auto; }
+  .catalog .catalog-page .catalog-cards .card_content .description_section .description_list {
+    padding-bottom: 55px; }
+  .catalog .catalog-page .catalog-cards .card_content .description_section .links_block span {
+    display: none; }
+  .catalog .catalog-page .catalog-cards .card_content .description_section .links_block a i {
+    font-size: 18px; }
+  .catalog .current-categories .category-block .block-content .item {
+    width: 20%; } }
+
+@media screen and (max-width: 1124px) {
+  .catalog .catalog-page .catalog-cards .card_content .bottom_section .left_item .current_price {
+    font-size: 1.5em; }
+  .catalog .catalog-page .catalog-cards .card_content .bottom_section .left_item .old_price {
+    margin-bottom: -4px;
+    padding-top: 0.2em; } }
+
+@media screen and (max-width: 992px) {
+  .left-sidebar {
+    margin-bottom: 30px;
+    display: none; }
+  .filter {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    border-bottom: 1px solid #e6e6e6; }
+  .filter .brand_section {
+    width: 33.33%;
+    border-right: 1px solid #e6e6e6;
+    border-bottom: none; }
+    .filter .brand_section:last-child {
+      border: none; }
+  .current_category {
+    display: block;
+    text-align: center;
+    color: #000;
+    margin: 20px 0; }
+  .sort-line {
+    margin-bottom: 20px; }
+  .single_v li {
+    width: 25%; }
+  .brand_country .all_collections_content li {
+    width: 20%; }
+  .filter_show_btn {
+    display: block; }
+  .banner_block {
+    display: block; }
+  .block_more_info {
+    display: block; }
+  .block_popular {
+    display: none; }
+  .popular_cat_block {
+    margin-bottom: 40px; }
+  .popular_cat_block ul li {
+    width: 20%;
+    padding: 0 20px; }
+  .popular_cat_block ul li:last-child {
+    display: none; }
+  .watch-more-block {
+    display: none; }
+  .slider_sidebar,
+  .popular_categories_block {
+    display: none; }
+  .selected_par_block {
+    display: block; } }
+
+@media screen and (max-width: 768px) {
+  .sort-line .sort-line-content {
+    display: none; }
+  .mobile_sort {
+    display: block; }
+  .catalog .current-categories .category-block .block-content-bottom ul.bottom_categories li,
+  .catalog .current-categories .category-block .block-content .item {
+    width: 25%; }
+  .catalog .catalog-page .number_page {
+    display: block; }
+  .bottom_line {
+    margin-bottom: 10px; }
+  .popular_cat_block {
+    display: none; }
+  .paginator .desc {
+    display: none; }
+  .paginator .prev a::before,
+  .paginator .next a::before {
+    display: inline; }
+  .paginator .prev a {
+    -webkit-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+            transform: rotate(180deg); } }
+
+@media screen and (max-width: 650px) {
+  .single_v li,
+  .brand_country .all_collections_content li {
+    width: 33.33%; } }
+
+@media screen and (max-width: 567px) {
+  .filter {
+    display: block; }
+  .filter .brand_section {
+    width: 100%;
+    border-right: none;
+    border-bottom: 1px solid #e6e6e6; }
+  .all-brand-page,
+  .all-brand-page .catalog-page {
+    margin-top: 20px; }
+  .filter_show_btn {
+    margin-bottom: 20px; }
+  .single_v li {
+    width: 50%; }
+  .brand_country {
+    display: none; }
+  .text_block .title_list {
+    display: none; }
+  .brand_list_container {
+    -webkit-column-count: 1;
+       -moz-column-count: 1;
+            column-count: 1; }
+  .catalog .catalog-page .page_number {
+    display: block;
+    padding-bottom: 20px; }
+  .current-categories .content-categories,
+  .with_box,
+  .paginator .paginator_link_page:nth-child(2),
+  .paginator .paginator_link_page:nth-child(8),
+  .popular_cat_block,
+  .bottom_line,
+  .banner_block {
+    display: none; }
+  .block_more_info {
+    padding-bottom: 0;
+    margin-top: 0; }
+  .paginator .paginator_link_page {
+    width: 16.66%; }
+  .selected_par_block .selected_list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-bottom: 10px; }
+  .selected_par_block .title {
+    display: block;
+    margin-bottom: 10px; }
+  .selected_par_block {
+    margin-bottom: 0; }
+  .selected_par_block .selected_list li {
+    width: 100%; }
+  .selected_par_block .selected_list li .wrap {
+    margin: 2px 0;
+    padding-right: 10px; }
+  .card_banner_box {
+    display: none; }
+  .catalog .catalog-page .catalog-cards .card_content .bottom_section .right_item {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex; }
+  .catalog .current-categories .mobile_cat_list {
+    display: block; }
+  .left-sidebar {
+    margin-bottom: 20px !important; } }
